--- a/index.html
+++ b/index.html
@@ -27,80 +27,80 @@
          
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScc1WvCKCZuBKj7Roz_RFsWm-YEm-qJngrj8lLjXACYOzK09A/viewform" class="projeto-card" target="_self">
-            <img src="imgs/especies-invasoras.webp" alt="TRILHA DE APRENDIZAGEM DA DISCIPLINA EDUCAÇÃO DAS NOVAS TECNOLOGIAS DA IMFORMACÃO COMUNICAÇÃO" class="projeto-imagem">
+            <img src="imgs/especies-invasoras.webp" alt="espécies invasoras" class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">TRILHA DE APRENDIZAGEM DA DISCIPLINA EDUCAÇÃO DAS NOVAS TECNOLOGIAS DA IMFORMACÃO COMUNICAÇÃO</h3>
-                <p class="projeto-desc">Esta trilha de aprendizado foi desenvolvida com o objetivo para levar informações de forma clara e interativa sobre o perigo das espécies invasoras e seus efeitos.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">espécies invasoras</h3>
+                <p class="projeto-desc">Nesta trilha veremos um pouco sobre o perigo das espécies invasoras e seus efeitos.</p>
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
 
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejiTUAB01SERYkaHF1Sh2DkO3S_N1JLe8QJgeWmI3puFGxvQ/viewform" class="projeto-card" target="_self">
-            <img src="imgs/gamba_de_orelha_branca.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnO21g84GBwogBzvvDHfyM6kEga0_lLVBtZo9IXSENeRYCug/viewform" class="projeto-card" target="_self">
+            <img src="imgs/natureza-brasileira.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">Importância ecológica do gambá de orelha branca</h3>
-                <p class="projeto-desc">Nesta trilha iremos aprender mais sobre um marsupial brasileiro conhecido como gambá.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">Natureza Brasileira</h3>
+                <p class="projeto-desc">Nesta trilha aprenderemos sobre alguns assuntos relacionados a natureza do Brasil</p>
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
 
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejiTUAB01SERYkaHF1Sh2DkO3S_N1JLe8QJgeWmI3puFGxvQ/viewform" class="projeto-card" target="_self">
-            <img src="imgs/gamba_de_orelha_branca.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScmswl29lCYLVFZo2FV2rGw4o4FoTXNSJ-qpbspqhiN9NVRQA/viewform" class="projeto-card" target="_self">
+            <img src="imgs/tubarao.webp" alt="Os Guardiões Essenciais dos Mares" class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">Importância ecológica do gambá de orelha branca</h3>
-                <p class="projeto-desc">Nesta trilha iremos aprender mais sobre um marsupial brasileiro conhecido como gambá.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">Os Guardiões Essenciais dos Mares</h3>
+                <p class="projeto-desc">Nesta trilha iremos aprender um pouco mais sobre os tubarões e sua importância nos ecossistemas marinhos.</p>
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
 
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejiTUAB01SERYkaHF1Sh2DkO3S_N1JLe8QJgeWmI3puFGxvQ/viewform" class="projeto-card" target="_self">
-            <img src="imgs/gamba_de_orelha_branca.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7_8VHvgfzX8gYgjnQF4-D6wOPRDWo7OkOXmpbPRuVnpwk0g/viewform" class="projeto-card" target="_self">
+            <img src="imgs/giardiase.webp" alt="Giardíase" class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">Importância ecológica do gambá de orelha branca</h3>
-                <p class="projeto-desc">Nesta trilha iremos aprender mais sobre um marsupial brasileiro conhecido como gambá.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">Giardíase</h3>
+                <p class="projeto-desc">Nesta trilha iremos aprender sobre a Giardíase.</p>
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
 
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejiTUAB01SERYkaHF1Sh2DkO3S_N1JLe8QJgeWmI3puFGxvQ/viewform" class="projeto-card" target="_self">
-            <img src="imgs/gamba_de_orelha_branca.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFy9pLVD0h36uqoBOiVWs1BOHxNSkU-5A0OJWiwiolnlt-kg/viewform" class="projeto-card" target="_self">
+            <img src="imgs/fotossintese.jpg" alt="Fotossíntese" class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">Importância ecológica do gambá de orelha branca</h3>
-                <p class="projeto-desc">Nesta trilha iremos aprender mais sobre um marsupial brasileiro conhecido como gambá.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">Fotossíntese</h3>
+                <p class="projeto-desc">Nesta trilha iremos aprender sobre a Fotossíntese.</p>
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
 
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejiTUAB01SERYkaHF1Sh2DkO3S_N1JLe8QJgeWmI3puFGxvQ/viewform" class="projeto-card" target="_self">
-            <img src="imgs/gamba_de_orelha_branca.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
+        <a href="http://docs.google.com/forms/d/e/1FAIpQLSf3Kmd5c95Qh9bmQJfRpOwTnkZKYD3yOKEQ0k6LOic6Qfzkig/viewform" class="projeto-card" target="_self">
+            <img src="imgs/vida-marinha.jpg" alt="Riscos de extinções na vida marinha." class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">Importância ecológica do gambá de orelha branca</h3>
-                <p class="projeto-desc">Nesta trilha iremos aprender mais sobre um marsupial brasileiro conhecido como gambá.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">Riscos de extinções na vida marinha</h3>
+                <p class="projeto-desc">Nesta trilha iremos refletir sobre os riscos de extinção que ameaçam a vida marinha.</p>
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
 
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejiTUAB01SERYkaHF1Sh2DkO3S_N1JLe8QJgeWmI3puFGxvQ/viewform" class="projeto-card" target="_self">
-            <img src="imgs/gamba_de_orelha_branca.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScpSj32YM12junO5dBfvJHvF6NswTizoqa87ky6bPO1DtbaOw/viewform" class="projeto-card" target="_self">
+            <img src="imgs/habitats-marinhos.avif" alt="importância da proteção de habitats marinhos." class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">Importância ecológica do gambá de orelha branca</h3>
-                <p class="projeto-desc">Nesta trilha iremos aprender mais sobre um marsupial brasileiro conhecido como gambá.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">importância da proteção de habitats marinhos.</h3>
+                <p class="projeto-desc">Nesta trilha iremos aprender sobre a importância da proteção de habitats marinhos.</p>
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
 
         <!-- Exemplo de card de projeto - você vai repetir esse bloco para cada forms -->
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSejiTUAB01SERYkaHF1Sh2DkO3S_N1JLe8QJgeWmI3puFGxvQ/viewform" class="projeto-card" target="_self">
-            <img src="imgs/gamba_de_orelha_branca.webp" alt="Importância ecológica do gambá de orelha branca" class="projeto-imagem">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeK0s7O-azJH-xRc-LhSjKi2tsMp_gYiWEj0OqkBYWPhoV01A/viewform" class="projeto-card" target="_self">
+            <img src="imgs/predadores-marinhos.jpg" alt="Estratégia de caça de predadores marinhos" class="projeto-imagem">
             <div class="projeto-info">
-                <h3 class="projeto-titulo" style=" text-decoration: none;">Importância ecológica do gambá de orelha branca</h3>
-                <p class="projeto-desc">Nesta trilha iremos aprender mais sobre um marsupial brasileiro conhecido como gambá.</p>
+                <h3 class="projeto-titulo" style=" text-decoration: none;">Estratégia de caça de predadores marinhos</h3>
+                <p class="projeto-desc">Nesta trilha iremos aprender sobre as estratégias de caça dos predadores marinhos.</p>  
             </div>
         </a>
         <!-- Adicione mais cards conforme necessário -->
