--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Explorando a Fauna e Flora Regional</title>
+    <title>Trilhas de Aprendizagem</title>
 
 </head>
 <body>
     <header>
-        <h1>Explorando a Fauna e Flora Regional</h1>
+        <h1>Trilhas de Aprendizagem</h1>
         <!-- <p>Projetos de biologia para jovens exploradores</p> -->
     </header>
     
